flux/infrastructure/micro/services/webhook-relay/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-relay
  namespace: micro
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`webhook.tools.becklab.cloud`)
    kind: Rule
    services:
    - name: webhook-relay
      port: 80
